# accfft

./: CMakeLists.txt
cmake/: FindPNETCDF.cmake
include/: accfft.h  accfft_common.h
src/: accfft.cpp  accfft_gpu.cpp
steps/fBm/: CMakeLists.txt  GetPot.h  fBm_cpu.cpp  fBm_gpu.cpp  kernels.cu
steps/poisson3d/: CMakeLists.txt  kernels.cu  poisson3d_cpu.cpp  poisson3d_gpu.cpp
steps/poisson3d/cnpy/: CMakeLists.txt
steps/poisson3d/pnetcdf/: pnetcdf_io.cpp  pnetcdf_io.h
steps/powerSpectrum/: CMakeLists.txt  pnetcdf  powerSpectrum_cpu.cpp
steps/step1/: step1.cpp  step1_gpu.cpp
test/: CMakeLists.txt  test_dfft_get_local_size.cpp
